--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = "Renderscript Intrinsics Replacement Toolkit"
+rootProject.name = "Toolkit"
 include ':test-app'
-include ':renderscript-toolkit'
+include ':toolkit'
